Implement functions related to sending and receiving messages.

--- a/client/index.html
+++ b/client/index.html
@@ -7,14 +7,24 @@
 
     <!-- dependencies -->
     <script src="bower_components/jquery/jquery.min.js"></script>
+    <script src="bower_components/underscore/underscore-min.js"></script>
     <!-- your scripts -->
-    <script src="env/config.js"></script>
+    <script src="env/config.json"></script>
     <script src="scripts/app.js"></script>
   </head>
   <body>
     <div id="main">
+
       <h1>chatterbox</h1>
       <!-- Your HTML goes here! -->
+      <form>
+        <input class="input_user">
+        <button class="select_user">Select username</button>
+
+      </form>
+      <div class="username">User 1</div>
+      <div class="username">User 2</div>
+
     </div>
   </body>
 </html>
