--- a/client/index.html
+++ b/client/index.html
@@ -9,7 +9,7 @@
     <script src="bower_components/jquery/jquery.min.js"></script>
     <script src="bower_components/underscore/underscore-min.js"></script>
     <!-- your scripts -->
-    <script src="env/config.json"></script>
+    <script src="env/config.js"></script>
     <script src="scripts/app.js"></script>
   </head>
   <body>
@@ -18,12 +18,11 @@
       <h1>chatterbox</h1>
       <!-- Your HTML goes here! -->
       <form>
-        <input class="input_user">
-        <button class="select_user">Select username</button>
-
+        <textarea class="input_user"></textarea>
       </form>
-      <div class="username">User 1</div>
-      <div class="username">User 2</div>
+      <button class="send" type="submit">submit</button>
+      <div class="username user1">User 1</div>
+      <div class="username user2">User 2</div>
 
     </div>
   </body>
